# OpenDTC

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  autogen.sh  configure.ac
src/: Makefile.am  device.c  device.h  main.c  stream.c  stream.h  usbapi.h  usbimpl.h  usbimpl_libusb.c  usbimpl_libusb.h
